header__flexible-lengths

--- a/landing-pages/merchandising.html
+++ b/landing-pages/merchandising.html
@@ -4527,7 +4527,7 @@
                                                                                 class="header__flexible-tab"
                                                                               >
                                                                                 <div
-                                                                                  class="_1il0ryh"
+                                                                                  class="header__flexible-lengths"
                                                                                   role="group"
                                                                                   aria-labelledby="subcategory-item-super_flexible_lengths"
                                                                                 >
@@ -4615,7 +4615,7 @@
                                                                                   </div>
                                                                                 </div>
                                                                                 <div
-                                                                                  class="_1il0ryh"
+                                                                                  class="header__flexible-lengths"
                                                                                   role="group"
                                                                                   aria-labelledby="subcategory-item-super_flexible_dates"
                                                                                 >
@@ -14860,7 +14860,7 @@
                                                                                 class="header__flexible-tab"
                                                                               >
                                                                                 <div
-                                                                                  class="_1il0ryh"
+                                                                                  class="header__flexible-lengths"
                                                                                   role="group"
                                                                                   aria-labelledby="subcategory-item-super_flexible_lengths"
                                                                                 >
@@ -14948,7 +14948,7 @@
                                                                                   </div>
                                                                                 </div>
                                                                                 <div
-                                                                                  class="_1il0ryh"
+                                                                                  class="header__flexible-lengths"
                                                                                   role="group"
                                                                                   aria-labelledby="subcategory-item-super_flexible_dates"
                                                                                 >
