--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -4447,7 +4447,7 @@
                                                                                 class="header__flexible-tab"
                                                                               >
                                                                                 <div
-                                                                                  class="_1il0ryh"
+                                                                                  class="header__flexible-lengths"
                                                                                   role="group"
                                                                                   aria-labelledby="subcategory-item-super_flexible_lengths"
                                                                                 >
@@ -4542,7 +4542,7 @@
                                                                                   </div>
                                                                                 </div>
                                                                                 <div
-                                                                                  class="_1il0ryh"
+                                                                                  class="header__flexible-lengths"
                                                                                   role="group"
                                                                                   aria-labelledby="subcategory-item-super_flexible_dates"
                                                                                 >
