header__flexible-selected

--- a/landing-pages/merchandising.html
+++ b/landing-pages/merchandising.html
@@ -4533,7 +4533,7 @@
                                                                                 >
                                                                                   <div
                                                                                     id="subcategory-item-super_flexible_lengths"
-                                                                                    class="_2qqyqg"
+                                                                                    class="header__flexible-selected"
                                                                                   >
                                                                                     Stay
                                                                                     for
@@ -4621,7 +4621,7 @@
                                                                                 >
                                                                                   <div
                                                                                     id="subcategory-item-super_flexible_dates"
-                                                                                    class="_2qqyqg"
+                                                                                    class="header__flexible-selected"
                                                                                   >
                                                                                     Go
                                                                                     anytime
@@ -14866,7 +14866,7 @@
                                                                                 >
                                                                                   <div
                                                                                     id="subcategory-item-super_flexible_lengths"
-                                                                                    class="_2qqyqg"
+                                                                                    class="header__flexible-selected"
                                                                                   >
                                                                                     Stay
                                                                                     for
@@ -14954,7 +14954,7 @@
                                                                                 >
                                                                                   <div
                                                                                     id="subcategory-item-super_flexible_dates"
-                                                                                    class="_2qqyqg"
+                                                                                    class="header__flexible-selected"
                                                                                   >
                                                                                     Go
                                                                                     anytime
