--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -4453,7 +4453,7 @@
                                                                                 >
                                                                                   <div
                                                                                     id="subcategory-item-super_flexible_lengths"
-                                                                                    class="_2qqyqg"
+                                                                                    class="header__flexible-selected"
                                                                                   >
                                                                                     Stay
                                                                                     for
@@ -4548,7 +4548,7 @@
                                                                                 >
                                                                                   <div
                                                                                     id="subcategory-item-super_flexible_dates"
-                                                                                    class="_2qqyqg"
+                                                                                    class="header__flexible-selected"
                                                                                   >
                                                                                     Go
                                                                                     anytime
