--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1374,7 +1374,7 @@
                                             <div class="contact-host__border-top-color" style="border-top-color: rgb(221,221,221);"></div>
                                             <div data-plugin-in-point-id="HOST_PROFILE_DEFAULT" data-section-id="HOST_PROFILE_DEFAULT"
                                               style="padding-top: 48px; padding-bottom: 48px;">
-                                              <div class="_1byskwn">
+                                              <div class="modal__items">
                                                 <div class="_5702fc7">
                                                   <section>
                                                     <div class="c6y5den dir dir-ltr">
@@ -8877,7 +8877,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
               </div>
             </div>
             <div class="_ttrffo">
-              <div class="_1byskwn">
+              <div class="modal__items">
                 <div class="_162hp8xh">
                   <div class="_1iqo52n">
                     <div>
