--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3577,7 +3577,7 @@
                     <div>
                      <div>
                       <div class="_1ny5tm2">
-                       <div class="_1byskwn">
+                       <div class="modal__items">
                         <div class="_1oa4lmzv">
                          <div class="mb-4">
                           <div class="relative" style="padding-bottom: 133.33%;">
@@ -3604,7 +3604,7 @@
                   </div>
                   <div role="tabpanel" id="panel--GALLERY_LIBRARY_MODAL-tabs--1" aria-labelledby="tab--GALLERY_LIBRARY_MODAL-tabs--1" hidden="">
                    <div class="_11ee8v7">
-                    <div class="_1byskwn">
+                    <div class="modal__items">
                      <div class="_1oa4lmzv">
                       <div class="_l8ik20">
                        <div class="relative">
@@ -4329,7 +4329,7 @@
                     <div>
                      <div>
                       <div class="_1ny5tm2">
-                       <div class="_1byskwn">
+                       <div class="modal__items">
                         <div class="_1oa4lmzv">
                          <div class="mb-4">
                           <div class="relative" style="padding-bottom: 133.33%;">
@@ -4356,7 +4356,7 @@
                   </div>
                   <div role="tabpanel" id="panel--GALLERY_LIBRARY_MODAL-tabs--1" aria-labelledby="tab--GALLERY_LIBRARY_MODAL-tabs--1" hidden="">
                    <div class="_11ee8v7">
-                    <div class="_1byskwn">
+                    <div class="modal__items">
                      <!-- <div class="_1oa4lmzv">
                       <div class="_l8ik20">
                        <div class="relative">
