--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -2935,7 +2935,7 @@
                                                 <div class="_15thk4s">Extraordinary homes with five-star everything
                                                 </div>
                                               </h2>
-                                              <div class="_1byskwn">
+                                              <div class="modal__items">
                                                 <div class="_lao3nn">
                                                   <div class="_lzotvt">Pristine and expertly designed, each Airbnb Luxe
                                                     home comes with luxury amenities, services, and a dedicated trip
@@ -5185,7 +5185,7 @@
                                                   </div>
                                                 </div>
                                                 <div class="mt-6">
-                                                  <div class="_1byskwn">
+                                                  <div class="modal__items">
                                                     <div class="_162hp8xh">
                                                       <div class="_tpcbtl">
                                                         <div>
@@ -12559,7 +12559,7 @@
                                               <div class="_15thk4s">Extraordinary homes with five-star everything
                                               </div>
                                             </h2>
-                                            <div class="_1byskwn">
+                                            <div class="modal__items">
                                               <div class="_lao3nn">
                                                 <div class="_lzotvt">Pristine and expertly designed, each Airbnb Luxe
                                                   home comes with luxury amenities, services, and a dedicated trip
@@ -15160,7 +15160,7 @@
                                                 </div>
                                               </div>
                                               <div class="mt-6">
-                                                <div class="_1byskwn">
+                                                <div class="modal__items">
                                                   <div class="_162hp8xh">
                                                     <div class="_tpcbtl">
                                                       <div>
