--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6707,7 +6707,7 @@
                               alt="" class="modal__share-desc-img">
                             <div class="modal__desc">Check out my wishlist: Teas</div>
                           </div>
-                          <div class="_1byskwn">
+                          <div class="modal__items">
                             <div class="modal__share-item">
                               <div class="modal__share-content"><button role="button" type="button" class="_11eqlma4">
                                   <div class="flex-items-center">
@@ -6911,7 +6911,7 @@
                               alt="" class="modal__share-desc-img">
                             <div class="modal__desc">Contribute to my wishlist: Teas</div>
                           </div>
-                          <div class="_1byskwn">
+                          <div class="modal__items">
                             <div class="modal__share-item">
                               <div class="modal__share-content"><button role="button" type="button" class="_11eqlma4">
                                   <div class="flex-items-center">
