--- a/submission/discounts.html
+++ b/submission/discounts.html
@@ -1065,7 +1065,7 @@
                                   <div class="_1im981w">
                                    <div class="_4pxnlo">
                                     <div class="_6pp6ra">
-                                     <div class="_1byskwn">
+                                     <div class="modal__items">
                                       <div class="_eh05g0l">
                                        <div class="_1wlfjr">Group size</div>
                                        <div class="flex">
@@ -1113,7 +1113,7 @@
                                      </div>
                                     </div>
                                     <div class="_mqvhfh">
-                                     <div class="_1byskwn">
+                                     <div class="modal__items">
                                       <div class="_s03a2tw">
                                        <div class="_13mi7gx">
                                         <div class="_1wlfjr">Each adult pays</div>
