--- a/edit/photos.html
+++ b/edit/photos.html
@@ -1733,7 +1733,7 @@
                                       <a href="/resources/hosting-experiences/a/photo-requirements-for-experiences-386"
                                         class="text-link">
                                         <span
-                                          class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr">
+                                          class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr">
                                           <span class="dir dir-ltr">
                                             Learn more about photo
                                             requirements
