--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -2944,7 +2944,7 @@
                                               </div>
                                               <div class="_y8lhwe"><a target="_blank" href="/luxury"
                                                   class="text-link"><span
-                                                    class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
+                                                    class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"><span
                                                       class=" dir dir-ltr">Learn More</span><span
                                                       class="atm_gz_1y44olf dir dir-ltr"><svg viewBox="0 0 32 32"
                                                         xmlns="http://www.w3.org/2000/svg"
@@ -5258,7 +5258,7 @@
                                                 </div>
                                                 <div class="mt-4"><button data-testid="location-modal-button"
                                                     type="button" class="btn-link-condensed"><span
-                                                      class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
+                                                      class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"><span
                                                         class=" dir dir-ltr">More about the location</span><span
                                                         class="atm_gz_1y44olf dir dir-ltr"><svg viewBox="0 0 32 32"
                                                           xmlns="http://www.w3.org/2000/svg"
@@ -12568,7 +12568,7 @@
                                             </div>
                                             <div class="_y8lhwe"><a target="_blank" href="/luxury"
                                                 class="text-link"><span
-                                                  class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
+                                                  class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"><span
                                                     class=" dir dir-ltr">Learn More</span><span
                                                     class="atm_gz_1y44olf dir dir-ltr"><svg viewBox="0 0 32 32"
                                                       xmlns="http://www.w3.org/2000/svg"
@@ -15232,7 +15232,7 @@
                                               </div>
                                               <div class="mt-4"><button data-testid="location-modal-button"
                                                   type="button" class="btn-link-condensed"><span
-                                                    class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
+                                                    class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex f-items-center dir dir-ltr"><span
                                                       class=" dir dir-ltr">More about the location</span><span
                                                       class="atm_gz_1y44olf dir dir-ltr"><svg viewBox="0 0 32 32"
                                                         xmlns="http://www.w3.org/2000/svg"
